[gd_scene load_steps=5 format=3 uid="uid://c6q1a0scjwvcr"]

[ext_resource type="Theme" uid="uid://vov6rqh4poin" path="res://assets/themes/terminal_theme.tres" id="1_orems"]
[ext_resource type="Script" uid="uid://dp3eqs18w0pcs" path="res://src/scenes/game_over_menu.gd" id="2_dccca"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqhu4"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 41.0
bg_color = Color(0.16783637, 0.008564408, 0.05376006, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.79607844, 0.16470589, 0.36862746, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ys38"]
bg_color = Color(0.79607844, 0.16470589, 0.36862746, 1)

[node name="GameOverMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -596.0
offset_top = -396.5
offset_right = 596.0
offset_bottom = 396.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_orems")
theme_override_styles/panel = SubResource("StyleBoxFlat_dqhu4")
script = ExtResource("2_dccca")

[node name="Title Bar" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_orems")
theme_override_colors/default_color = Color(0.023529412, 0.09803922, 0.019607844, 1)
theme_override_font_sizes/normal_font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_4ys38")
text = "GAME OVER"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32
alignment = 1

[node name="Score Text" type="RichTextLabel" parent="VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_orems")
theme_type_variation = &"WarningLabel"
bbcode_enabled = true
text = "SURVIVAL TIME: [shake rate=5.0 level=25 connected=1]1:36[/shake]"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="RichTextLabel" parent="VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_orems")
theme_type_variation = &"WarningLabel"
bbcode_enabled = true
text = "Play Better. Win More."
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(696.405, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 54

[node name="Restart" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_orems")
theme_type_variation = &"Warning"
text = "
RESTART GAME

"

[node name="Quit" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_orems")
theme_type_variation = &"Warning"
text = "
QUIT

"

[connection signal="pressed" from="HBoxContainer/Restart" to="." method="_restart_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_quit_pressed"]
